Fix header visibility: adjust demo-container positioning to start below header (top: 120px) while maintaining absolute positioning for FlowGram.AI functionality

--- a/packages/workflow-canvas/src/styles/index.css
+++ b/packages/workflow-canvas/src/styles/index.css
@@ -61,10 +61,10 @@
 .demo-container {
   position: absolute;
   left: 0px;
-  top: 0px;
+  top: 120px;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 120px);
   flex-direction: column;
 }
 
